--- a/style.css
+++ b/style.css
@@ -2,3 +2,4 @@
 @import url("./css-styles/header.css");
 @import url("./css-styles/main.css");
 @import url("./css-styles/footer.css");
+@import url("./css-styles/hovers.css");
