--- a/css-styles/main.css
+++ b/css-styles/main.css
@@ -29,6 +29,7 @@
 
 .card{
     display: flex;
+    flex-direction: column;
     width: 392px;
     height: 294px;
     border-radius: 15px;
@@ -64,7 +65,10 @@
 }
 
 .card-top{
+    display: flex;
+    justify-content: flex-start;
     flex-direction: row;
+    width: 392px;
 }
 
 .card-headline{
@@ -80,5 +84,24 @@
 }
 
 .card-icons{
+    display: flex;
     flex-direction: row;
+    align-items: center;
+}
+
+.card-icons img{
+    width: 28px;
+    height: 28px;
+}
+
+.card-icons button{
+    background-color: var(--background-color);
+    color: #fff;
+    font-family: Poppins;
+    font-size: 16px;
+    border: none;
+    border-radius: 15px;
+    width: 106px;
+    height: 42px;
+    margin: 0px 0px 0px 165px;
 }
