--- a/css-styles/main.css
+++ b/css-styles/main.css
@@ -117,3 +117,22 @@
     height: 42px;
     margin: 0px 0px 0px 165px;
 }
+
+.card-icons img{
+    margin: 0px 12px 0px 12px;
+}
+
+.card-info{
+    margin: 30px 0px 37px 0px;
+}
+
+.load-more{
+    background-color: var(--background-color);
+    color: var(--brand-color-orange);
+    border: solid 1px var(--brand-color-lightGray);
+    border-radius: 15px;
+    width: 184px;
+    height: 64px;
+    font-size: 20px;
+    justify-content: center;
+}
