--- a/css-styles/header.css
+++ b/css-styles/header.css
@@ -3,7 +3,7 @@ body{
     font-family: Poppins;
     color: rgb(255, 255, 255);
 }
-
+/*  */
 /* розмітка */
     /* nav menu */
 
@@ -12,7 +12,7 @@ body{
     align-items: center;
     justify-content: space-between;
 }
-
+/*  */
 .nav-menu{
     max-width: 471px;
     max-height: 24px;
@@ -20,14 +20,13 @@ body{
     align-items: center;
     flex-wrap: nowrap;
 }
-
     /* hero */
 
 .hero{
     display: flex;
     justify-content: space-between;
 }
-
+/*  */
 .header-input{
     display: flex;
     max-width: 480px;
@@ -38,7 +37,7 @@ body{
     align-items: center;
     margin-bottom: 226px;
 }
-
+/*  */
 .hhhero{
     flex-direction: column;
 }
