--- a/css-styles/main.css
+++ b/css-styles/main.css
@@ -126,6 +126,13 @@
     margin: 30px 0px 37px 0px;
 }
 
+.button{
+    display: flex;
+    width: 1440px;
+    height: auto;
+    border: solid black;
+}
+
 .load-more{
     background-color: var(--background-color);
     color: var(--brand-color-orange);
