--- a/css-styles/main.css
+++ b/css-styles/main.css
@@ -3,8 +3,8 @@
 
 .tools{
     display: flex;
-    height: 1348px;
-    width: 1440px;
+    max-height: 1348px;
+    max-width: 1440px;
     /* justify-content: center; */
 }
 
@@ -17,12 +17,12 @@
     margin: 200px 0px 90px 0px;
 }
 
-.line1{
+.card-line1{
     display: flex;
     justify-content: space-between;
 }
 
-.line2{
+.card-line2{
     display: flex;
     justify-content: space-between;
 }
@@ -30,13 +30,13 @@
 .card{
     display: flex;
     flex-direction: column;
-    width: 392px;
-    height: 294px;
+    max-width: 392px;
+    max-height: 294px;
     border-radius: 15px;
     background-color: var(--background-color);
 }
 
-.line1 .card{
+.card-line1 .card{
     margin: 0px 12px 50px 12px;
 }
 
@@ -48,9 +48,9 @@
 /* objects */
     /* tools */
 
-.tools-tittle h2{
-    width: 455px;
-    height: 62px;
+.card-tools-tittle h2{
+    max-width: 455px;
+    max-height: 62px;
     font-size: 48px;
     font-weight: 500;
     text-align: center;
@@ -58,7 +58,7 @@
 }
 
 .tools-tittle p{
-    width: 427px;
+    max-width: 427px;
     text-align: center;
     font-size: 18px;
     font-weight: 500;
@@ -68,8 +68,8 @@
 
 
 .card img{
-    width: 64px;
-    height: 64px;
+    max-width: 64px;
+    max-height: 64px;
 }
 
 .card-top{
@@ -77,7 +77,7 @@
     justify-content: flex-start;
     flex-direction: row;
     align-items: center;
-    width: 392px;
+    max-width: 392px;
 }
 
 .card-headline{
@@ -102,19 +102,19 @@
 }
 
 .card-icons img{
-    width: 28px;
-    height: 28px;
+    max-width: 28px;
+    max-height: 28px;
 }
 
-.card-icons button{
+.visitButton{
     background-color: var(--background-color);
     color: #fff;
     font-family: Poppins;
     font-size: 16px;
     border: none;
     border-radius: 15px;
-    width: 106px;
-    height: 42px;
+    max-width: 106px;
+    max-height: 42px;
     margin: 0px 0px 0px 165px;
 }
 
@@ -128,9 +128,8 @@
 
 .button{
     display: flex;
-    width: 1440px;
+    max-width: 1440px;
     height: auto;
-    border: solid black;
 }
 
 .load-more{
@@ -138,8 +137,8 @@
     color: var(--brand-color-orange);
     border: solid 1px var(--brand-color-lightGray);
     border-radius: 15px;
-    width: 184px;
-    height: 64px;
+    max-width: 184px;
+    max-height: 64px;
     font-size: 20px;
     justify-content: center;
 }
