--- a/css-styles/footer.css
+++ b/css-styles/footer.css
@@ -1,3 +1,30 @@
 footer{
     display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 1440px;
+}
+
+.footerColumn1{
+    display: flex;
+    flex-direction: column;
+    order: 1;
+}
+
+.footerColumn2{
+    display: flex;
+    flex-direction: column;
+    order: 2;
+}
+
+.footerColumn3{
+    display: flex;
+    flex-direction: column;
+    order: 3;
+}
+
+.footerColumn4{
+    display: flex;
+    flex-direction: column;
+    order: 4;
 }
