--- a/css-styles/main.css
+++ b/css-styles/main.css
@@ -43,7 +43,7 @@
     margin: 0px 12px 50px 12px;
 }
 
-.line2 .card{
+.card-line2 .card{
     margin: 50px 12px 50px 12px;
 }
 
@@ -79,25 +79,35 @@
 .newcommerTools{
     display: flex;
     flex-direction: row;
+    width: 1245px;
+    border: solid black;
 }
 
 .newcommerToolsTitle{
     flex-direction: column;
-    width: auto;
+    max-width: 400px;
+    border: solid black;
+    align-items: center;
+    order: 1;
+}
+
+.cards2{
+    display: flex;
+    /* margin-left: 600px; */
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-self: flex-start;
+    border: solid black;
+    max-width: 600px;
+    order: 2;
 }
 
 .line3{
     display: flex;
-    justify-content: space-between;
 }
 
 .line4{
     display: flex;
-    justify-content: space-between;
-}
-
-.cards{
-    width: auto;
 }
 
 
@@ -136,14 +146,17 @@
 /* objects */
     /* tools */
 
-.card-tools-tittle h2{
+.tools-tittle h2{
     width: 455px;
     height: 62px;
     font-size: 48px;
     font-weight: 500;
     text-align: center;
     justify-content: center;
+    margin: 200px 0px 25px 0px;
 }
+
+
 
 .tools-tittle p{
     width: 427px;
@@ -218,6 +231,8 @@
     display: flex;
     max-width: 1440px;
     height: auto;
+    justify-content: center;
+    margin: 100px 0px 35px 0px;
 }
 
 .load-more{
@@ -230,6 +245,12 @@
     font-size: 20px;
     justify-content: center;
     align-items: center;
+    margin: 50px 0px 0px 0px;
+}
+
+.loadMoreButton{
+    display: flex;
+    justify-content: center;
 }
 
     /* trust */
