--- a/css-styles/roots.css
+++ b/css-styles/roots.css
@@ -5,7 +5,8 @@
 }
 
 .container{
-    width: 1440px;
+    justify-content: center;
+    width: 1450px;
     height: auto;
     padding: 0 15px;
     margin: 0 auto;
