--- a/css-styles/main.css
+++ b/css-styles/main.css
@@ -159,15 +159,9 @@
 
 .contributorBox{
     display: flex;
-    flex-direction: column;
-    height: 200px; 
     justify-content: center;
+    flex-direction: column; 
     text-align: center;
-}
-
-.line{
-    background-color: rgba(255, 255, 255, 0.15);
-    height: 0.5px;
 }
 
 
@@ -231,9 +225,12 @@
 }
 
 .card-icons img{
-    max-width: 28px;
-    max-height: 28px;
+    width: 28px;
+    height: 28px;
 }
+
+
+
 
 .visitButton{
     background-color: var(--background-color);
@@ -244,7 +241,7 @@
     border-radius: 15px;
     width: 106px;
     height: 42px;
-    margin: 0px 0px 0px 165px;
+    margin: 0px 0px 0px 125px;
 }
 
 .card-icons img{
@@ -362,11 +359,11 @@
 }
 
 .txtContributor{
-    width: 427px;
+    width: 450px;
     font-size: 18px;
     font-weight: 500;
-    text-align: center;
     margin: 25px 0px 100px 0px;
+    justify-content: center;
 }
 
 .input{
