--- a/css-styles/main.css
+++ b/css-styles/main.css
@@ -36,6 +36,7 @@
     max-width: 392px;
     max-height: 294px;
     width: 100%;
+    flex-shrink: 0;
     border-radius: 15px;
     background-color: var(--background-color);
     padding: 33px;
