--- a/css-styles/header.css
+++ b/css-styles/header.css
@@ -58,7 +58,7 @@ a{
     color: #b6b6b6;
 }
 
-.nav-menu-button{
+.nav-menu-button2{
     color:#FFFFFFFF;
     background-color: var(--brand-color-orange);
     border: none;
@@ -66,11 +66,18 @@ a{
     width: 118px;
     height: 48px;
     font-size: 16px;
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
-.buttons-nav-menu a{
-    margin-right: 20px;
+.nav-menu-button1{
+    color:#FFFFFFFF;
+    background-color: var(--background-color);
+    border: none;
+    border-radius: 8px;
+    width: 118px;
+    height: 48px;
+    font-size: 16px;
+    margin-right: 10px;
 }
 
 .nav-menu a{
