--- a/css-styles/roots.css
+++ b/css-styles/roots.css
@@ -6,7 +6,8 @@
 
 .container{
     justify-content: center;
-    width: 1440px;
+    max-width: 1440px;
+    width: 100%;
     height: auto;
     padding: 0 15px;
     margin: 0 auto;
