--- a/css-styles/main.css
+++ b/css-styles/main.css
@@ -70,6 +70,8 @@
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
+    gap: 30px;
+    padding: 10px;
 }
 
 .trustBrends{
@@ -285,7 +287,6 @@
     flex-wrap: nowrap;
     font-size: 24px;
     font-weight: 500;
-    margin: 0px 0px 55px 0px;
 }
 
 .trustBlock img{
